--- a/package.json
+++ b/package.json
@@ -7,10 +7,14 @@
     "dev": "nodemon server.js"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "express-jwt": "^8.4.1",
+    "install": "^0.13.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^5.13.4",
     "morgan": "^1.10.0"
   },
